# internal/controllers/shims/item.go
@@ -27,7 +27,7 @@ func RegisterItemController(v2 *svr.V2, itemService *service.ItemService) {
 // @Summary      Get All Items
 // @Tags         Item
 // @Produce      json
-// @Success      200     {array}  modelsv2.Item{name_i18n=models.I18nString,existence=models.Existence}
+// @Success      200     {array}  v2.Item{name_i18n=models.I18nString,existence=models.Existence}
 // @Failure      500     {object}  pgerr.PenguinError "An unexpected error occurred"
 // @Router       /PenguinStats/api/v2/items [GET]
 func (c *ItemController) GetItems(ctx *fiber.Ctx) error {
@@ -47,7 +47,7 @@ func (c *ItemController) GetItems(ctx *fiber.Ctx) error {
 // @Tags         Item
 // @Produce      json
 // @Param        itemId  path      string  true  "Item ID"
-// @Success      200     {object}  modelsv2.Item{name_i18n=models.I18nString,existence=models.Existence}
+// @Success      200     {object}  v2.Item{name_i18n=models.I18nString,existence=models.Existence}
 // @Failure      400     {object}  pgerr.PenguinError "Invalid or missing itemId. Notice that this shall be the **string ID** of the item, instead of the internally used numerical ID of the item."
 // @Failure      500     {object}  pgerr.PenguinError "An unexpected error occurred"
 // @Router       /PenguinStats/api/v2/items/{itemId} [GET]
