# internal/controllers/shims/zone.go
@@ -27,7 +27,7 @@ func RegisterZoneController(v2 *svr.V2, zoneService *service.ZoneService) {
 // @Summary      Get All Zones
 // @Tags         Zone
 // @Produce      json
-// @Success      200     {array}  modelsv2.Zone{existence=models.Existence,zoneName_i18n=models.I18nString}
+// @Success      200     {array}  v2.Zone{existence=models.Existence,zoneName_i18n=models.I18nString}
 // @Failure      500     {object}  pgerr.PenguinError "An unexpected error occurred"
 // @Router       /PenguinStats/api/v2/zones [GET]
 func (c *ZoneController) GetZones(ctx *fiber.Ctx) error {
@@ -47,7 +47,7 @@ func (c *ZoneController) GetZones(ctx *fiber.Ctx) error {
 // @Tags         Zone
 // @Produce      json
 // @Param        zoneId  path      int  true  "Zone ID"
-// @Success      200     {object}  modelsv2.Zone{existence=models.Existence,zoneName_i18n=models.I18nString}
+// @Success      200     {object}  v2.Zone{existence=models.Existence,zoneName_i18n=models.I18nString}
 // @Failure      400     {object}  pgerr.PenguinError "Invalid or missing zoneId. Notice that this shall be the **string ID** of the zone, instead of the v3 API internally used numerical ID of the zone."
 // @Failure      500     {object}  pgerr.PenguinError "An unexpected error occurred"
 // @Router       /PenguinStats/api/v2/zones/{zoneId} [GET]
